work on appendix

--- a/tex/math.tex
+++ b/tex/math.tex
@@ -12,6 +12,7 @@ Depending on the context, a variable can be a scalar value, a vector, or a matri
   	Bold, upper case & $\boldsymbol{A}$ & A matrix\\
   	Brackets with a point & $a(\cdot)$ & A function, where $(\cdot)$ is a placeholder for a variable\\
   	Superscript rectangular brackets & $a^{[l]}$ & $l$ is the index of the layer, e.g. $\boldsymbol{W}^{[l]}$ is the weight matrix of layer $l$\\
+  	Superscript curved brackets & $a^{(i)}$ & $i$ is the index of the sample, e.g. $\boldsymbol{x}^{(i)}$ is the$i$-th sample of a data set\\
 \end{tabular}
 
 
@@ -27,6 +28,7 @@ Depending on the context, a variable can be a scalar value, a vector, or a matri
 	$\boldsymbol{a}$ & The output of an activation function in an intermediate layer of a multi-layer network, the output of the model is typically denoted as $\boldsymbol{\hat{y}}$\\
 	$b$ & The bias of a single neuron\\
 	$\boldsymbol{b}$ & The bias of a network layer\\
+	$h$ & The latent representations of a network that are typically used in a subsequent downstream task\\
 	$k$ & The number of neurons within a layer\\
 	$L$ & The number of layers of a network\\
 	$l$ & The index of a layer, e.g. $\boldsymbol{W}^{[l]}$ is the weight matrix of layer $l$\\
