work on neuro concepts

--- a/tex/math.tex
+++ b/tex/math.tex
@@ -10,7 +10,8 @@ Depending on the context, a variable can be a scalar value, a vector, or a matri
   	No formatting, lower case & $a$ & A scalar value\\
   	Bold, lower case & $\boldsymbol{a}$ & A vector\\
   	Bold, upper case & $\boldsymbol{A}$ & A matrix\\
-  	Brackets with a point & $a(\cdot)$ & A function, where $(\cdot)$ is a placeholder for a variable\\
+  	Curved brackets with a point & $a(\cdot)$ & A function, where $(\cdot)$ is a placeholder for a variable\\
+  	Rectangular brackets after a variable & $a[t]$ & Variable $a$ at time $t$\\
   	Superscript rectangular brackets & $a^{[l]}$ & $l$ is the index of the layer, e.g. $\boldsymbol{W}^{[l]}$ is the weight matrix of layer $l$\\
   	Superscript curved brackets & $a^{(i)}$ & $i$ is the index of the sample, e.g. $\boldsymbol{x}^{(i)}$ is the$i$-th sample of a data set\\
 \end{tabular}
